# lits

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  lits.cabal
.github/workflows/: run-tests.yaml
app/: DataBase.hs  Filter.hs  Formatting.hs  Main.hs  Types.hs
lib/: Commands.hs  DataBase.hs  EntryManager.hs  FileManager.hs  Filter.hs  Formatting.hs  Types.hs  Utilities.hs
lib/LiTS/: Commands.hs  DataBase.hs  EntryManager.hs  FileManager.hs  Filter.hs  Formatting.hs  Utilities.hs
test/: Main.hs  TestUtils.hs
