cabal-version:      3.0
name:               lits
version:            0.1.0.0
synopsis:           Library tagging system
-- description:
license:            MIT
license-file:       LICENSE
author:             Ferenc Lukács
maintainer:         flukacs@proton.me
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable lits
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types
                    , DataBase
                    , Filter
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , aeson
                    , bytestring
                    , directory
                    , filepath
    hs-source-dirs:   app
    default-language: Haskell2010
