cabal-version:      3.0
name:               lits
version:            0.1.0.0
synopsis:           Library tagging system
-- description:
license:            MIT
license-file:       LICENSE
author:             Ferenc Lukács
maintainer:         flukacs@proton.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Types
                    , DataBase
                    , Filter
                    , Formatting
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , aeson
                    , bytestring
                    , directory
                    , filepath
    hs-source-dirs:   lib
    default-language: Haskell2010

executable lits
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , aeson
                    , bytestring
                    , directory
                    , filepath
                    , lits

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lits-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        lits

