cabal-version:      3.0
name:               lits
version:            0.1.0.0
synopsis:           Library tagging system
description:        Simple CLI tool for library (as in collection of books) management and tagging
license:            MIT
license-file:       LICENSE
author:             Ferenc Lukács
maintainer:         flukacs@proton.me
-- copyright:
category:           CLI
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:
source-repository   head
  type:     git
  location: https://github.com/flukacs561/lits
  
common warnings
    ghc-options: -Wall
                 -Wcompat
                 -Widentities
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wmissing-export-lists
                 -Wmissing-home-modules
                 -Wpartial-fields
                 -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  LiTS.Commands
                    , LiTS.DataBase
                    , LiTS.EntryManager
                    , LiTS.FileManager
                    , LiTS.Utilities
                    , LiTS.Formatting
                    , LiTS.Filter
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                   -- base ^>=4.17.2.1
                    , aeson >= 2.1.2 && < 2.2
                    , bytestring >= 0.11.5 && < 0.12
                    , directory >= 1.3.7 && < 1.4
                    , containers >= 0.6.7 && < 0.7
                    , filepath >= 1.4.2 && < 1.5
                    , text >= 2.0.2 && < 2.1
    hs-source-dirs:   lib
    default-language: Haskell2010

executable lits
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base
                   -- base ^>=4.17.2.1
                    , aeson >= 2.1.2 && < 2.2
                    , bytestring >= 0.11.5 && < 0.12
                    , directory >= 1.3.7 && < 1.4
                    , filepath >= 1.4.2 && < 1.5
                    , lits

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite lits-test
    import:           warnings
    default-language: Haskell2010
    other-modules:    TestUtils
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base,
                   --base ^>=4.17.2.1,
                      containers,
                      directory,
                      process,
                      lits,
                      tasty,
                      tasty-hunit,

